Created an "allen-like" object from teapot.

--- a/myd3d/myd3d.vcxproj.filters
+++ b/myd3d/myd3d.vcxproj.filters
@@ -291,5 +291,6 @@
     <FxCompile Include="Assets\Shaders\particle_ps.hlsl" />
     <FxCompile Include="Assets\Shaders\lines_vs.hlsl" />
     <FxCompile Include="Assets\Shaders\lines_ps.hlsl" />
+    <FxCompile Include="Assets\Shaders\allenLike_vs.hlsl" />
   </ItemGroup>
 </Project>
