--- a/myd3d/myd3d.vcxproj
+++ b/myd3d/myd3d.vcxproj
@@ -87,6 +87,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Components\Visual\VisualTessellatedEllipsoidComponent.cpp" />
     <ClCompile Include="Components\Visual\VisualTessellatedPlanetComponent.cpp" />
     <ClCompile Include="Components\Visual\VisualTessellatedTorusComponent.cpp" />
     <ClCompile Include="Physics\RigidBody\Circle.cpp" />
@@ -132,6 +133,7 @@
     <ClCompile Include="Scenes\TerrainDestructionScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Components\Visual\VisualTessellatedEllipsoidComponent.h" />
     <ClInclude Include="Components\Visual\VisualTessellatedPlanetComponent.h" />
     <ClInclude Include="Components\Visual\VisualTessellatedTorusComponent.h" />
     <ClInclude Include="Physics\RigidBody\Circle.h" />
@@ -214,6 +216,22 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">vp_main</EntryPointName>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\ellipsoid_ds.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Domain</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\ellipsoid_hs.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Hull</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\ellipsoid_ps.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\ellipsoid_vs.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="Assets\Shaders\lines_ps.hlsl">
