Added pre requisites for raymarching. (Shaders, Classes) Need to properly implement the component class. Sending correct shit and everythang.

--- a/myd3d/myd3d.vcxproj.filters
+++ b/myd3d/myd3d.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClCompile Include="Components\Visual\VisualBezierPatchComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Components\Visual\VisualRaymarchComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D3D.h">
@@ -302,6 +305,9 @@
     <ClInclude Include="Components\Visual\VisualBezierPatchComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Components\Visual\VisualRaymarchComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="window_config.txt" />
@@ -341,5 +347,7 @@
     <FxCompile Include="Assets\Shaders\bezierPatch_hs.hlsl" />
     <FxCompile Include="Assets\Shaders\bezierPatch_ps.hlsl" />
     <FxCompile Include="Assets\Shaders\bezierPatch_vs.hlsl" />
+    <FxCompile Include="Assets\Shaders\raymarch_vs.hlsl" />
+    <FxCompile Include="Assets\Shaders\raymarch_ps.hlsl" />
   </ItemGroup>
 </Project>
