Added networking to project. Sending data of the 3 circles. Other "GameTest" app is taking the data and outputting the position of the first circle. Seems to be working OK. Problem is some strange results every now and then, thought to be because of being locked out when reading the data, need to mutex that shit.

--- a/myd3d/myd3d.vcxproj.filters
+++ b/myd3d/myd3d.vcxproj.filters
@@ -156,6 +156,24 @@
     <ClCompile Include="Components\Visual\VisualRaymarchComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Networking\BallViewerNetworkManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Networking\BroadcastReceiver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Networking\NetworkManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Networking\OffworldNetworkManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Networking\UDPBroadcast.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Thread\Thread.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D3D.h">
@@ -306,6 +324,27 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Components\Visual\VisualRaymarchComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Networking\BallViewerNetworkManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Networking\BroadcastReceiver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Networking\NET_CONSTS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Networking\NetworkManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Networking\OffworldNetworkManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Networking\UDPBroadcast.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Thread\Thread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
