--- a/myd3d/myd3d.vcxproj
+++ b/myd3d/myd3d.vcxproj
@@ -26,7 +26,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -44,6 +44,7 @@
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)..\AntTweakBar\lib;$(LibraryPath)</LibraryPath>
+    <EnableManagedIncrementalBuild>true</EnableManagedIncrementalBuild>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -57,7 +58,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions);_SCL_SECURE_NO_WARNINGS</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)../DirectXTK/Inc;$(ProjectDir)../AntTweakBar/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../DirectXTK/Inc;$(ProjectDir)../AntTweakBar/include;$(ProjectDir)../SocketLib/Inc</AdditionalIncludeDirectories>
       <AdditionalUsingDirectories>$(ProjectDir)../AntTweakBar/lib</AdditionalUsingDirectories>
     </ClCompile>
     <Link>
@@ -93,6 +94,11 @@
     <ClCompile Include="Components\Visual\VisualTessellatedEllipsoidComponent.cpp" />
     <ClCompile Include="Components\Visual\VisualTessellatedPlanetComponent.cpp" />
     <ClCompile Include="Components\Visual\VisualTessellatedTorusComponent.cpp" />
+    <ClCompile Include="Networking\BallViewerNetworkManager.cpp" />
+    <ClCompile Include="Networking\BroadcastReceiver.cpp" />
+    <ClCompile Include="Networking\NetworkManager.cpp" />
+    <ClCompile Include="Networking\OffworldNetworkManager.cpp" />
+    <ClCompile Include="Networking\UDPBroadcast.cpp" />
     <ClCompile Include="Physics\RigidBody\Circle.cpp" />
     <ClCompile Include="Physics\ContactManifold.cpp" />
     <ClCompile Include="Physics\PhysicsSystem.cpp" />
@@ -134,6 +140,7 @@
     <ClCompile Include="Components\Visual\VisualBitmapComponent.cpp" />
     <ClCompile Include="Assets\Shaders\ShaderManager.cpp" />
     <ClCompile Include="Scenes\TerrainDestructionScene.cpp" />
+    <ClCompile Include="Thread\Thread.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Components\Visual\VisualBezierPatchComponent.h" />
@@ -142,6 +149,12 @@
     <ClInclude Include="Components\Visual\VisualTessellatedEllipsoidComponent.h" />
     <ClInclude Include="Components\Visual\VisualTessellatedPlanetComponent.h" />
     <ClInclude Include="Components\Visual\VisualTessellatedTorusComponent.h" />
+    <ClInclude Include="Networking\BallViewerNetworkManager.h" />
+    <ClInclude Include="Networking\BroadcastReceiver.h" />
+    <ClInclude Include="Networking\NetworkManager.h" />
+    <ClInclude Include="Networking\NET_CONSTS.h" />
+    <ClInclude Include="Networking\OffworldNetworkManager.h" />
+    <ClInclude Include="Networking\UDPBroadcast.h" />
     <ClInclude Include="Physics\RigidBody\Circle.h" />
     <ClInclude Include="Physics\ContactManifold.h" />
     <ClInclude Include="Physics\PhysicsSystem.h" />
@@ -186,6 +199,7 @@
     <ClInclude Include="Components\Visual\VisualBitmapComponent.h" />
     <ClInclude Include="Assets\Shaders\ShaderManager.h" />
     <ClInclude Include="Scenes\TerrainDestructionScene.h" />
+    <ClInclude Include="Thread\Thread.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Assets\Data\planeData.txt" />
@@ -376,6 +390,9 @@
   <ItemGroup>
     <ProjectReference Include="..\DirectXTK\DirectXTK_Desktop_2012.vcxproj">
       <Project>{e0b52ae7-e160-4d32-bf3f-910b785e5a8e}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\SocketLib\SocketLib.vcxproj">
+      <Project>{c6c745d8-1a3c-40f4-9673-abde2853a8d1}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
