Added PhysCircleEntity class, doing this to make it easier to transmit physics data over network. Will also help with things like removing items from the physics system and changing colours depending on collisions, etc.

--- a/myd3d/myd3d.vcxproj.filters
+++ b/myd3d/myd3d.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClCompile Include="Physics\RigidBody\AABB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Entities\PhysCircleEntity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D3D.h">
@@ -369,6 +372,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Physics\RigidBody\AABB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Entities\PhysCircleEntity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
