--- a/myd3d/myd3d.vcxproj
+++ b/myd3d/myd3d.vcxproj
@@ -88,6 +88,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entities\PhysCircleEntity.cpp" />
     <ClCompile Include="Physics\RigidBody\AABB.cpp" />
     <ClCompile Include="Components\Visual\VisualBezierPatchComponent.cpp" />
     <ClCompile Include="Components\Visual\VisualGeomParticlesComponent.cpp" />
@@ -147,6 +148,7 @@
     <ClCompile Include="Thread\Thread.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Entities\PhysCircleEntity.h" />
     <ClInclude Include="Physics\RigidBody\AABB.h" />
     <ClInclude Include="Components\Visual\VisualBezierPatchComponent.h" />
     <ClInclude Include="Components\Visual\VisualGeomParticlesComponent.h" />
