CannBall and Offworld using same textures. Couple of test changes to UDP broadcast and receiver.

--- a/myd3d/myd3d.vcxproj.filters
+++ b/myd3d/myd3d.vcxproj.filters
@@ -383,6 +383,9 @@
     <ClInclude Include="Entities\PhysAABBEntity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Scenes\TerrainDestructionConsts.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="window_config.txt" />
